--- a/public/index.css
+++ b/public/index.css
@@ -74,14 +74,15 @@ h1 {
   color: rgb(119, 136, 153);
 }
 
-.delete {
-  margin: 5px 8px 5px 0px;
-}
-
 .contact {
   background-color: rgb(220, 220, 220);
   border: 3px solid rgb(119, 136, 153);
   display: block;
   margin-top: 10px;
   width: 400px;
+}
+
+.button {
+  margin: 10px 0px 5px 340px;
+  display: block;
 }
